<resources>
    <string name="app_name">SWU-2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="site">대외활동 사이트</string>
    <string name="logo">logo</string>
    <string name="linkareer">link</string>
    <string name="wevity">wevity</string>
    <string name="specup">specup</string>
    <string name="allcontest">allcon</string>
    <string name="swu_gmail_com">swu@gmail.com</string>
    <string name="study_with_u">STUDY WITH U</string>
    <string name="swu">©SWU</string>
    <string name="study_context">친구들과 함께하는 스터디 앱</string>
    <string name="pw">비밀번호</string>
    <string name="reg">회원가입</string>
    <string name="name">이름</string>
    <string name="register">가입하기</string>
</resources>