<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white_num1">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageButton
            android:id="@+id/allcon"
            android:layout_width="wrap_content"
            android:layout_height="205dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/allcontest"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/wevity"
            app:layout_constraintEnd_toStartOf="@+id/linkareer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/allocontests" />

        <ImageButton
            android:id="@+id/linkareer"
            android:layout_width="wrap_content"
            android:layout_height="205dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/linkareer"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/specup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/allcon"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/linkareer" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageButton
            android:id="@+id/wevity"
            android:layout_width="wrap_content"
            android:layout_height="205dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="40dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/wevity"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@drawable/wevity" />

        <ImageButton
            android:id="@+id/specup"
            android:layout_width="wrap_content"
            android:layout_height="205dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="40dp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/specup"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:srcCompat="@drawable/spaceup" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="327dp"
        android:layout_height="108dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="274dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/site"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/brown_num2"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>